<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AdvancedLevel">

    <EditText
        android:id="@+id/car_1_name"
        android:layout_width="151dp"
        android:layout_height="46dp"
        android:background="@color/cardview_dark_background"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="textPersonName"
        android:onClick="onEditTextClick1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/car_2_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toEndOf="@+id/car_imageView1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383" />

    <ImageView
        android:id="@+id/car_imageView1"
        android:layout_width="193dp"
        android:layout_height="153dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/car_image_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/car_imageView2"
        android:layout_width="193dp"
        android:layout_height="153dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/car_image_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_imageView1" />

    <ImageView
        android:id="@+id/car_imageView3"
        android:layout_width="193dp"
        android:layout_height="153dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/car_image_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_imageView2" />

    <EditText
        android:id="@+id/car_2_name"
        android:layout_width="151dp"
        android:layout_height="46dp"
        android:background="@color/cardview_dark_background"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="textPersonName"
        android:onClick="onEditTextClick2"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toEndOf="@+id/car_imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436" />

    <EditText
        android:id="@+id/car_3_name"
        android:layout_width="151dp"
        android:layout_height="46dp"
        android:layout_marginTop="120dp"
        android:background="@color/cardview_dark_background"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="textPersonName"
        android:onClick="onEditTextClick3"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toEndOf="@+id/car_imageView3"
        app:layout_constraintTop_toBottomOf="@+id/car_2_name"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/submit_Brand"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:onClick="onSubmit"
        android:text="Submit"
        app:backgroundTint="@color/buttoncolor3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="196dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/correct_answer_1"
        android:layout_width="151dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:gravity="clip_horizontal"
        android:textAlignment="center"
        android:textColor="@color/corrected_answer_color"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_1_name" />

    <TextView
        android:id="@+id/correct_answer_2"
        android:layout_width="151dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:gravity="clip_horizontal"
        android:textAlignment="center"
        android:textColor="@color/corrected_answer_color"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_2_name" />

    <TextView
        android:id="@+id/correct_answer_3"
        android:layout_width="151dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:gravity="clip_horizontal"
        android:textAlignment="center"
        android:textColor="@color/corrected_answer_color"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_3_name" />

    <TextView
        android:id="@+id/score"
        android:layout_width="130dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/timer"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result_textview"
        android:layout_width="188dp"
        android:layout_height="43dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />


</androidx.constraintlayout.widget.ConstraintLayout>